# gp-review

./: _quarto.yml  pyproject.toml
.github/workflows/: publish.yml
