[project]
name = "gp-review"
version = "0.1.0"
description = ""
authors = [
    {name = "QhenryQ",email = "33005790+QhenryQ@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[tool.poetry]
name = "gp-review"
version = "0.1.0"
description = "Quarto website for GP review"
authors = ["Your Name <you@example.com>"]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
